Upgrade to Byteman4 to support JDK9